Fixes spacing of share element.
The share element was in slightly different positions on the post page vs the index page because the `<main>` element had different padding. This aligns the padding of `<main>` and margin of `<dwac-share>` across the two pages. It also eliminates `.base-content` in favor of `main`. Since there should only be one `<main>` on the page, this should be safe.

--- a/src/www/404.css
+++ b/src/www/404.css
@@ -3,10 +3,10 @@
 @import url(./_includes/pages/base.css);
 @import url(./styles/theme.css);
 
-.base-content ul {
+main ul {
     list-style: none;
 }
 
-.base-content li + li {
+main li + li {
     margin-top: 0.75em;
 }
